--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,20 @@
 
 /* Your CSS Code here. */
+.holder {
+      display: grid;
+      width: 200px;
+      height: 200px;
+      grid-template-rows: repeat(2, 1fr);
+      grid-template-columns: repeat(2, 1fr);
+      gap: 5px; /* optional spacing */
+      border: 2px solid black; /* just to see container */
+    }
+
+    .item {
+      background-color: lightblue;
+      border: 1px solid blue;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-weight: bold;
+    }
